# wasm-perf

./: Cargo.toml
benches/: bench.rs  input.js  instrument.rs
common/: Cargo.toml
common/src/: lib.rs
examples/: perf.rs
plugin/: Cargo.toml
plugin-dylib/: Cargo.toml
plugin-dylib-api/: Cargo.toml
plugin-dylib-api/src/: lib.rs
plugin-dylib/src/: lib.rs
plugin-wasm/: Cargo.toml
plugin-wasm/src/: lib.rs
plugin/src/: lib.rs
scripts/: bench.sh  build-dylib.sh  build-wasm.sh  instrument.sh  test.sh
src/: dylib.rs  lib.rs  wasm.rs
tests/: tests.rs
