[workspace]
members = [
  "plugin-dylib",
  "plugin-wasm",
  "plugin",
]

[package]
edition = "2018"
name = "wasm-perf"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.10.3"
anyhow = "1.0.45"
common = {path = "./common/"}
once_cell = "1.8.0"
plugin = {path = "./plugin"}
plugin-dylib-api = {path = "./plugin-dylib-api/"}
swc_atoms = "0.2.9"
swc_common = "0.14.5"
swc_ecmascript = {version = "0.85.0", features = ["parser"]}
wasmtime = "0.31.0"

[dev-dependencies]
testing = "0.15.1"

[profile.release]
codegen-units = 1
lto = "fat"
