[workspace]
members = [
  "plugin-dylib",
  "plugin-wasm",
  "plugin",
]

[package]
edition = "2018"
name = "wasm-perf"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.10.3"
anyhow = "1.0.45"
bincode = {version = "2.0.0-alpha.2", features = ["serde"]}
common = {path = "./common/"}
once_cell = "1.8.0"
plugin = {path = "./plugin"}
plugin-dylib-api = {path = "./plugin-dylib-api/"}
wasmer = {version = "2.1.1"}
wasmer-wasi = "2.1.1"
swc_node_base = "0.5.1"

[dependencies.swc_atoms]
git = "https://github.com/kwonoj/swc.git"
branch = "feat-bincode-derive"

[dependencies.swc_common]
git = "https://github.com/kwonoj/swc.git"
branch = "feat-bincode-derive"

[dependencies.swc_ecmascript]
git = "https://github.com/kwonoj/swc.git"
branch = "feat-bincode-derive"
features = ["parser"]

[dev-dependencies.testing]
git = "https://github.com/kwonoj/swc.git"
branch = "feat-bincode-derive"

[profile.release]
codegen-units = 1
lto = "fat"
