[package]
edition = "2018"
name = "plugin-dylib-api"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
abi_stable = "0.10.3"
anyhow = "1.0.45"
common = {path = "../common/"}
serde = "1.0.130"
serde_json = "1.0.69"
