[package]
edition = "2021"
name = "plugin-dylib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.10.3"
anyhow = "1.0.45"
common = { path = "../common/" }
plugin = {path = "../plugin"}
plugin-dylib-api = {path = "../plugin-dylib-api/"}
serde = "1.0.130"
serde_json = "1.0.69"
swc_ecmascript = { version = "0.85.0", features = ["visit"] }
