[package]
edition = "2021"
name = "plugin-wasm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ['cdylib']

[dependencies]
anyhow = "1.0.45"
common = {path = "../common/"}
plugin = {path = "../plugin"}
serde = "1.0.130"
serde_json = "1.0.69"
swc_atoms = "0.2.9"
swc_common = "0.14.5"
swc_ecma_ast = "0.57.0"
swc_ecmascript = {version = "0.85.0", features = ["visit"]}
wasm-bindgen = "0.2.78"
