[package]
edition = "2018"
name = "plugin-wasm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ['cdylib']

[dependencies]
anyhow = "1.0.45"
common = {path = "../common/"}
parking_lot_core = "=0.8.0"
plugin = {path = "../plugin"}
serde = "1.0.130"
serde_json = "1.0.69"
swc_node_base = "0.5.1"
wasm-bindgen = "0.2.78"


[dependencies.swc_atoms]
git = "https://github.com/kwonoj/swc.git"
branch = "feat-bincode-derive"

[dependencies.swc_common]
git = "https://github.com/kwonoj/swc.git"
branch = "feat-bincode-derive"

[dependencies.swc_ecma_ast]
git = "https://github.com/kwonoj/swc.git"
branch = "feat-bincode-derive"

[dependencies.swc_ecmascript]
git = "https://github.com/kwonoj/swc.git"
branch = "feat-bincode-derive"
features = ["visit"]
