[package]
edition = "2021"
name = "plugin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
swc_atoms = "0.2.9"
swc_common = "0.14.5"
swc_ecmascript = {version = "0.85.0", features = ["parser", "visit"]}
