[package]
edition = "2018"
name = "plugin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}

swc_node_base = "0.5.1"

[dependencies.swc_atoms]
git = "https://github.com/kwonoj/swc.git"
branch = "feat-bincode-derive"

[dependencies.swc_common]
git = "https://github.com/kwonoj/swc.git"
branch = "feat-bincode-derive"

[dependencies.swc_ecmascript]
git = "https://github.com/kwonoj/swc.git"
branch = "feat-bincode-derive"
features = ["parser", "visit"]
